--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/loader/preloader.css" />
     <meta name="theme-color" content="var(--sec-color)" />
 
-    <title>furniture</title>
+    <title>Examero</title>
   </head>
   <body>
     <!-- ? Preloader Start -->
