--- a/about.html
+++ b/about.html
@@ -72,27 +72,27 @@
                 />
               </a>
               <li class="nav-item active mt-3 p-0">
-                <a href="../views/index.html" class="nav-link active">
+                <a href="index.html" class="nav-link active">
                   <i class="fas fa-home"></i> الرئيسيه</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="../views/about.html" class="nav-link">
+                <a href="about.html" class="nav-link">
                   <i class="fas fas fa-info-circle"></i> نبذه عن الموسسه
                 </a>
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="../views/products.html" class="nav-link">
+                <a href="#!" class="nav-link">
                   <i class="fas fas fa-info-circle"></i> خدماتنا</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="../views/contact_Us.html" class="nav-link">
+                <a href="#!" class="nav-link">
                   <i class="fas fa-address-book"></i> تواصل معنا</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="../views/contact_Us.html" class="nav-link">
+                <a href="#!" class="nav-link">
                   <i class="fas fa-address-book"></i> انضم لنا
                 </a>
               </li>
