--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 />
               </a>
               <li class="nav-item active mt-3 p-0">
-                <a href="../views/index.html" class="nav-link active">
+                <a href="index.html" class="nav-link active">
                   <i class="fas fa-home"></i> الرئيسيه</a
                 >
               </li>
@@ -122,17 +122,17 @@
                 </a>
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="" class="nav-link">
+                <a href="#!" class="nav-link">
                   <i class="fas fas fa-info-circle"></i> خدماتنا</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="" class="nav-link">
+                <a href="#!" class="nav-link">
                   <i class="fas fa-address-book"></i> تواصل معنا</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="" class="nav-link">
+                <a href="#!" class="nav-link">
                   <i class="fas fa-address-book"></i> انضم لنا
                 </a>
               </li>
