add logo in bottom of pages

--- a/about.html
+++ b/about.html
@@ -383,22 +383,40 @@
     <!--//////////////////////count Section/////////////////////////// */
 /* //////////////////////count Section/////////////////////////// */ -->
 
-    <!-- ///////////////////////////////////////////////////////////////////////// -->
-    <!-- ///////////////////////////////////////////////////////////////////////// -->
-    <!-- <section class="doc-photo ">
-  <div class="container">
-    <div class="text-center doc-photo-marg ">
-      <img class=" doctors-img-pre  ml-auto img-fluid img-responsive about-image" src="images/logo/glowing-logo.png" width="100px" height="100px" alt="doctors">
-      <p class="p_has_fs"> نهتم بتقديم خدمات تعليمية وأكاديمية مميزة في مختلف المجالات  </p>
-    </div>
-  </div>
-</section> -->
+ <!--////////////////////// cross Section/////////////////////////// */
 
+    <!-- ///////////////////////////////////////////////////////////////////////// -->
+    <!-- ///////////////////////////////////////////////////////////////////////// -->
+    <section class="doc-photo">
+      <div class="container">
+        <!-- <h1 class="text-center ">mostafa</h1> -->
+        <div class="text-center doc-photo-marg">
+          <img
+            class="doctors-img-pre ml-auto img-fluid img-responsive about-image"
+            src="images/logo/glowing-logo.png"
+            width="100px"
+            height="100px"
+            alt="doctors"
+          />
+          <p class="p_has_fs">
+            نهتم بتقديم خدمات تعليمية وأكاديمية مميزة في مختلف المجالات
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- ///////////////////////////////////////////////////////////////////////// -->
     <!-- ///////////////////////////////////////////////////////////////////////// -->
 
     <!--////////////////////// footer Section/////////////////////////// */
 /* ////////////////////// footer Section/////////////////////////// */ -->
-
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#085c31"
+        fill-opacity="1"
+        d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"
+      ></path>
+    </svg>
     <footer id="footer" class="">
       <div class="container mb-5">
         <div class="row">
