--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     </div>
     <!-- ? Preloader end -->
 
+
+
+
+
+
+
+
     <!-- ???????????????????????????????????! HEADER  ?????????????????????????????????? -->
     <!-- ???????????????????????????????????! HEADER  ?????????????????????????????????? -->
     <!-- data-vide-bg="images\video\1.mp4" -->
@@ -126,7 +133,7 @@
               </li>
               <li class="nav-item mt-3 p-0">
                 <a href="services.html" class="nav-link">
-                  <i class="fas fas fa-info-circle"></i> خدماتنا</a
+                  <i class="fas fas fa-hands-helping"></i> خدماتنا</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
@@ -135,8 +142,13 @@
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="login.html" class="nav-link text-center">
-                  <i class="fas fa-address-book"></i> انضم لنا
+                <a href="signup.html" class="nav-link text-center">
+                  <i class="fas fa-user-clock"></i> انضم لنا
+                </a>
+              </li>
+              <li class="nav-item mt-3 p-0">
+                <a class="nav-link text-center">
+                  <i class="fas fa-user"></i> تسجيل الدخول 
                 </a>
               </li>
             </ul>
@@ -191,8 +203,7 @@
               <div style="z-index: 1" class="col-lg-11 ml-auto">
                 <h2 class="title-text"> شعار اسئلتي </h2>
                 <p class="m-auto">
-                  “
-                  يلعب المعلم دورًا محوريًا في العملية التعليمية، ولذلك قمنا بإنشاء منصة إلكترونية لتساعد المعلمين 
+                  “يلعب المعلم دورًا محوريًا في العملية التعليمية، ولذلك قمنا بإنشاء منصة إلكترونية لتساعد المعلمين 
                   على إعداد الامتحانات مع التخطيط النموذجي لتوفير الوقت للمعلم”
                 </p>
                 <h5 class="text-left">– اسئلتي</h5>
@@ -234,9 +245,7 @@
           <!-- //////////////////////////////////////////// -->
         </div>
       </div>
-      <div
-        class="col-lg-12 m-auto p-2 d-flex align-items-end justify-content-center"
-      >
+      <div class="col-lg-12 m-auto p-2 d-flex align-items-end justify-content-center">
         <img
           src="images/baners/shape-top.svg"
           width="100%"
