--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
               </li>
               <li class="nav-item mt-3 p-0">
                 <a href="services.html" class="nav-link">
-                  <i class="fas fas fa-info-circle"></i> خدماتنا</a
+                  <i class="fas fas fa-hands-helping"></i> خدماتنا</a
                 >
               </li>
               <li class="nav-item mt-3 p-0">
@@ -91,8 +91,13 @@
                 >
               </li>
               <li class="nav-item mt-3 p-0">
-                <a href="login.html" class="nav-link text-center">
-                  <i class="fas fa-address-book"></i> انضم لنا
+                <a href="signup.html" class="nav-link text-center">
+                  <i class="fas fa-user-clock"></i> انضم لنا
+                </a>
+              </li>
+              <li class="nav-item mt-3 p-0">
+                <a class="nav-link text-center">
+                  <i class="fas fa-user"></i> تسجيل الدخول 
                 </a>
               </li>
             </ul>
@@ -108,9 +113,10 @@
                 الصفحه الرئيسيه ==> مميزات اسئلتي
               </h4>
               <p class="w-100 text-right">
-                لوريم إيبسوم(Lorem Ipsum) هو ببساطة نص شكلي (بمعنى أن الغاية هي
-                الشكل وليس المحتوى) ويُستخدم في صناعات المطابع ودور النشر.
-              </p>
+            نسعى إلى تقديم خدمات تعليمية وأكاديمية مميزة في مختلف المجالات لجميع
+            الطلبة والباحثين في جميع المستويات التعليمية والأكاديمية، وخاصة طلبة
+            الدراسات العليا، مع حرصنا الشديد والتزامنا بإتباع معايير البحث
+            العلمي والكتابة الأكاديمية المحترفة والسليمة.              </p>
               <!-- <a  class="text-light  " href="#About">
                     <button data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800" class="butn1 mt-3"> discover me </button>
                 </a> -->
@@ -127,13 +133,11 @@
     <section class="category-carsouls mt-5">
       <div class="container-fluid mt-5">
         <div class="text-center">
-          <h2 class="mt-5 title-text">مميزات اسئلتي تتضمن</h2>
+          <h2 class="mt-5 title-text">مميزات اسئلتي </h2>
           <p>
             نسعى إلى تقديم خدمات تعليمية وأكاديمية مميزة في مختلف المجالات لجميع
             الطلبة والباحثين في جميع المستويات التعليمية والأكاديمية، وخاصة طلبة
-            الدراسات العليا، مع حرصنا الشديد والتزامنا بإتباع معايير البحث
-            العلمي والكتابة الأكاديمية المحترفة والسليمة.
-          </p>
+            الدراسات العليا</p>
         </div>
         <div class="container-fluid mt-5">
           <div class="row m-auto">
