--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Chango&family=Griffy&display=swap" rel="stylesheet">
     <!-- main Styles -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/login.css">
     <title> | Log In | </title>
 
@@ -54,11 +54,15 @@
         <ul class="nav nav-tabs text-center mt-3 col-lg-12 p-3">
 
           <li style="border-left:1px solid #fff ;" class="nav-item col-lg-6 col-md-6 col-sm-6 ">
-            <a  class="nav-link  mb-3" data-toggle="tab" href="#studentLogin"> <img class="tab-image img-fluid" style="color: white;" width="60px" height="60px"  src="images/baners/student.PNG" alt=""> </a>
+            <a  class="nav-link  mb-3" data-toggle="tab" href="#studentLogin"> 
+                <img class="tab-image img-fluid" style="color: white;" width="60px" height="60px"  src="images/baners/student.PNG" alt="">
+            </a>
           </li>
           <!-- ////////// -->
           <li class="nav-item col-lg-6 col-md-6 col-sm-6 ">
-            <a class="nav-link text-center mb-3" data-toggle="tab" href="#teacherLogin">  <img class="tab-image img-fluid" width="60px" height="60px" src="images/baners/teachers2.PNG" alt=""> </a>
+            <a class="nav-link text-center mb-3" data-toggle="tab" href="#teacherLogin">  
+                <img class="tab-image img-fluid" width="60px" height="60px" src="images/baners/teachers2.PNG" alt="">
+            </a>
           </li>
           <!-- ///////// -->
 
