--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
     <!-- main Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/login.css">
-    <title> | Log In | </title>
+    <title> تسجيل الدخول </title>
 
 </head>
 <body>
