--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
           <!-- ////////// -->
           <li class="nav-item col-lg-6 col-md-6 col-sm-6 ">
             <a class="nav-link text-center mb-3" data-toggle="tab" href="#teacherLogin">  
-                <img class="tab-image img-fluid" width="60px" height="60px" src="images/baners/teachers2.PNG" alt="">
+                <img class="tab-image img-fluid" width="60px" height="60px" src="images/baners/teachers2.png" alt="">
             </a>
           </li>
           <!-- ///////// -->
