update in signup page

--- a/signup.html
+++ b/signup.html
@@ -55,13 +55,13 @@
 
           <li style="border-left:1px solid #fff ;" class="nav-item col-lg-6 col-md-6 col-sm-6 ">
             <a  class="nav-link  mb-3" data-toggle="tab" href="#studentLogin"> 
-                <img class="tab-image img-fluid" style="color: white;" width="100px" height="100px"  src="images/baners/student.PNG" alt="">
+                 تسجيل دخول الطالب 
             </a>
           </li>
           <!-- ////////// -->
           <li class="nav-item col-lg-6 col-md-6 col-sm-6 ">
             <a class="nav-link text-center mb-3" data-toggle="tab" href="#teacherLogin">  
-                <img class="tab-image img-fluid" width="100px" height="100px" src="images/baners/teachers2.png" alt="">
+                تسجيل دخول المعلم 
             </a>
           </li>
           <!-- ///////// -->
@@ -76,7 +76,7 @@
 <div id="studentLogin" class=" tab-pane active "><br>
     <div class=" login-form col-lg-12 text-white text-center">
         
-        <h2> تسجيل دخول الطالب </h2>
+        <!-- <h2> تسجيل دخول الطالب </h2> -->
         <form class="contact-form mt-2" >
                     <div class="row">
                         <div class="col-lg-6 mt-5">
@@ -120,7 +120,7 @@
 <!-- ///////////////////////////////////////////////////// -->
 <div id="teacherLogin" class=" tab-pane  "><br>
     <div class=" login-form col-lg-12 text-white text-center">
-        <h2> تسجيل دخول المعلم </h2>
+        <!-- <h2> تسجيل دخول المعلم </h2> -->
         <form class="contact-form mt-2" >
                     <div class="row">
                         <div class="col-lg-6 mt-5">
