--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-md-10 col-sm-12 welcomediv">
               <h4 class="type-text text-right">
-                الصفحه الرئيسيه ==> معلومات عنا
+                الصفحه الرئيسيه <i class=" fa fa-arrow-left ml-2 mr-2"></i> معلومات عنا
               </h4>
               <p class="w-100 text-right">
                 يلعب المعلم دورًا محوريًا في العملية التعليمية، ولذلك قمنا
@@ -191,7 +191,7 @@
               aria-orientation="vertical"
             >
               <a
-                class="nav-link py-4 p-3 active"
+                class="nav-link py-4 p-3 active text-center"
                 id="v-pills-home-tab"
                 data-toggle="pill"
                 href="#mession"
@@ -199,13 +199,13 @@
                 aria-controls="v-pills-home"
                 aria-selected="true"
               >
-                <span class="font-weight-bold small text-uppercase"
+                <span class="font-weight-bold small text-uppercase text-center"
                   >مهمتنا</span
                 ></a
               >
 
               <a
-                class="nav-link py-4 p-3"
+                class="nav-link py-4 p-3 text-center"
                 id="v-pills-profile-tab"
                 data-toggle="pill"
                 href="#vission"
@@ -213,13 +213,13 @@
                 aria-controls="v-pills-profile"
                 aria-selected="false"
               >
-                <span class="font-weight-bold small text-uppercase"
+                <span class="font-weight-bold small text-uppercase text-center"
                   >رويتنا</span
                 ></a
               >
 
               <a
-                class="nav-link py-4 p-3"
+                class="nav-link py-4 p-3 text-center"
                 id="v-pills-messages-tab"
                 data-toggle="pill"
                 href="#value"
@@ -227,7 +227,7 @@
                 aria-controls="v-pills-messages"
                 aria-selected="false"
               >
-                <span class="font-weight-bold small text-uppercase"
+                <span class="font-weight-bold small text-uppercase text-center"
                   >هدفنا</span
                 ></a
               >
@@ -245,9 +245,9 @@
                 role="tabpanel"
                 aria-labelledby="v-pills-home-tab"
               >
-                <div class="row tab-text text-right">
+                <div class="row tab-text text-center">
                   <div class="col-lg-10 m-auto">
-                    <h2>مهمتنا</h2>
+                    <h2 class="text-center">مهمتنا</h2>
                     <p class="font-italic mb-4">
                       ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم
                       ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما
@@ -270,9 +270,9 @@
                 aria-labelledby="v-pills-home-tab"
               >
                 <div class="row tab-text">
-                  <div class="row tab-text text-right">
-                    <div class="col-lg-10 m-auto">
-                      <h2>رويتنا</h2>
+                  <div class="row tab-text text-center">
+                    <div class="col-lg-10 m-auto text-center">
+                      <h2 class="text-center">رويتنا</h2>
                       <p class="font-italic mb-4">
                         ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم
                         ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما
@@ -297,9 +297,9 @@
                 aria-labelledby="v-pills-home-tab"
               >
                 <div class="row tab-text">
-                  <div class="row tab-text text-right">
-                    <div class="col-lg-10 m-auto">
-                      <h2>هدفنا</h2>
+                  <div class="row tab-text text-center">
+                    <div class="col-lg-10 m-auto text-center">
+                      <h2 class="text-center">هدفنا</h2>
                       <p class="font-italic mb-4">
                         ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم
                         ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما
@@ -388,7 +388,7 @@
         <div class="text-center doc-photo-marg">
           <img
             class="doctors-img-pre ml-auto img-fluid img-responsive about-image"
-            src="images/logo/glowing-logo.png"
+            src="images/logo/Examero.png"
             width="100px"
             height="100px"
             alt="doctors"
