--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="about-image p-3">
               <img
                 class="img-fluid about-me-img img-fluid mt-5"
-                src="images/logo/glowing-logo.png"
+                src="images/logo/Examero.png"
                 alt=""
               />
             </div>
@@ -642,8 +642,8 @@
         <!-- <h1 class="text-center ">mostafa</h1> -->
         <div class="text-center doc-photo-marg">
           <img
-            class="doctors-img-pre ml-auto img-fluid img-responsive about-image"
-            src="images/logo/glowing-logo.png"
+            class="doctors-img-pre ml-auto img-fluid img-responsive "
+            src="images/logo/Examero.png"
             width="100px"
             height="100px"
             alt="doctors"
