--- a/services.html
+++ b/services.html
@@ -109,7 +109,7 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-md-10 col-sm-12 welcomediv">
               <h4 class="type-text text-right">
-                الصفحه الرئيسيه ==> مميزات اسئلتي
+                الصفحه الرئيسيه <i class=" fa fa-arrow-left ml-2 mr-2 "></i> مميزات اسئلتي
               </h4>
               <p class="w-100 text-right">
                 نسعى إلى تقديم خدمات تعليمية وأكاديمية مميزة في مختلف المجالات
@@ -316,7 +316,6 @@
             <!-- ? ******************************************** -->
           </div>
         </div>
-
       </div>
     </section>
 
@@ -329,8 +328,8 @@
         <!-- <h1 class="text-center ">mostafa</h1> -->
         <div class="text-center doc-photo-marg">
           <img
-            class="doctors-img-pre ml-auto img-fluid img-responsive about-image"
-            src="images/logo/glowing-logo.png"
+            class="doctors-img-pre ml-auto img-fluid img-responsive"
+            src="images/logo/Examero.png"
             width="100px"
             height="100px"
             alt="doctors"
